# autonomous-research-assistant

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: base.yaml  colab.yaml  kaggle.yaml  local.yaml
docs/: ARCHITECTURE.md
notebooks/: README.md  setup_colab.ipynb
scripts/: bootstrap_project.py  build_vector_index.py  evaluate_rag.py  evaluate_retrieval.py  generate_embeddings.py  ingest_arxiv.py  ingest_arxiv_simple.py  ingest_datasets.py  process_arxiv_pdfs.py  review_chunks.py  run_rag_query.py  run_retrieval_query.py  run_writer_agent.py  validate_pdf_processing.py  validate_phase2.py  validate_retrieval_quality.py
src/autonomous_research_assistant_data/: __init__.py  bootstrap.py  cli.py  config.py
src/autonomous_research_assistant_data.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/autonomous_research_assistant_data/chunking/: __init__.py  semantic.py
src/autonomous_research_assistant_data/core/: environment.py  hashing.py  huggingface.py  logging.py  retry.py  time.py
src/autonomous_research_assistant_data/ingestion/: __init__.py  base.py
src/autonomous_research_assistant_data/models/: common.py
src/autonomous_research_assistant_data/parsers/: __init__.py  pdf_extractor.py  section_parser.py
src/autonomous_research_assistant_data/processing/: __init__.py  base.py  pipeline.py  text_cleaner.py  utils.py
src/autonomous_research_assistant_data/rag/: __init__.py
src/autonomous_research_assistant_data/retrieval/: __init__.py  common.py
src/autonomous_research_assistant_data/storage/: file_store.py  manifest.py  metadata_store.py  state.py
src/autonomous_research_assistant_data/utils/: __init__.py  colab.py  datasets.py
(+149 files in other folders)
