[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-research-assistant-data"
version = "0.2.0"
description = "Production-grade Phase 2 data collection infrastructure for autonomous scientific research workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "arxiv==2.1.3",
  "datasets==2.19.1",
  "fastapi==0.111.0",
  "huggingface_hub==0.23.4",
  "httpx==0.27.0",
  "numpy==1.26.4",
  "packaging==24.1",
  "pandas==2.2.2",
  "pyarrow==16.1.0",
  "pydantic==2.7.4",
  "PyYAML==6.0.1",
  "tqdm==4.66.4",
  "uvicorn==0.30.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["autonomous_research_assistant_data*"]
