[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-research-assistant-data"
version = "0.4.0"
description = "Production-grade scientific data ingestion and PDF processing infrastructure for autonomous research workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "arxiv==2.1.3",
  "datasets==2.19.1",
  "fastapi==0.111.0",
  "huggingface_hub==0.23.4",
  "httpx==0.27.0",
  "numpy==1.26.4",
  "packaging==24.1",
  "pandas==2.2.2",
  "pdfplumber==0.11.4",
  "pyarrow==16.1.0",
  "pymupdf==1.24.9",
  "pydantic==2.7.4",
  "PyYAML==6.0.1",
  "tqdm==4.66.4",
  "uvicorn==0.30.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["autonomous_research_assistant_data*"]
